--- a/src/app/todo/info/info.component.html
+++ b/src/app/todo/info/info.component.html
@@ -1,7 +1,7 @@
 <div>
   <h1>Info Todo N° {{todoID}}</h1>
   <button type="button" [routerLink]="'/todo/home/'">List Todo</button>
-  <h2>id {{todo.id}}</h2>
-  <h2>title {{todo.title}}</h2>
-  <h2>status {{todo.completed}}</h2>
+  <h2>id: {{todo.id}}</h2>
+  <h2>title: {{todo.title}}</h2>
+  <h2>status: {{todo.completed}}</h2>
 </div>
